--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2986,48 +2986,52 @@ footer p:last-of-type a:hover {
   border-radius: 2px;
   background: #4fc1e9;
   border: 1px solid #38b9e6;
+  box-shadow: 0em -0.185rem 0em rgba(0, 0, 0, 0.1) inset;
   color: #fff;
   display: inline-block;
   padding: 10px 20px;
   text-decoration: none;
+  -webkit-transition: opacity 0.25s ease, background-color 0.25s ease, color 0.25s ease, background 0.25s ease, text-shadow 0.25s ease, box-shadow 0.25s ease;
+  -moz-transition: opacity 0.25s ease, background-color 0.25s ease, color 0.25s ease, background 0.25s ease, text-shadow 0.25s ease, box-shadow 0.25s ease;
+  transition: opacity 0.25s ease, background-color 0.25s ease, color 0.25s ease, background 0.25s ease, text-shadow 0.25s ease, box-shadow 0.25s ease;
 }
-/* line 528, ../sass/style.scss */
+/* line 530, ../sass/style.scss */
 .btn:hover, .pagination .prev a:hover, .pagination .next a:hover {
   border: 1px solid #1790bb;
   background: #1aa2d1;
   color: #fff;
 }
-/* line 534, ../sass/style.scss */
+/* line 536, ../sass/style.scss */
 .btn:active, .pagination .prev a:active, .pagination .next a:active {
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2) inset, 0 0 10px rgba(0, 0, 0, 0.5) inset;
+  box-shadow: 0px 1px 0.2em 0px rgba(0, 0, 0, 0.3) inset;
   color: #fff;
 }
 
-/* line 541, ../sass/style.scss */
+/* line 543, ../sass/style.scss */
 .pagination {
   list-style-type: none;
   overflow: hidden;
   padding-left: 0;
   margin: 60px 0 0 0;
 }
-/* line 547, ../sass/style.scss */
+/* line 549, ../sass/style.scss */
 .pagination .prev a {
   float: right;
 }
 @media screen and (max-width: 767px) {
-  /* line 547, ../sass/style.scss */
+  /* line 549, ../sass/style.scss */
   .pagination .prev a {
     float: none;
     display: block;
     text-align: right;
   }
 }
-/* line 558, ../sass/style.scss */
+/* line 560, ../sass/style.scss */
 .pagination .next a {
   float: left;
 }
 @media screen and (max-width: 767px) {
-  /* line 558, ../sass/style.scss */
+  /* line 560, ../sass/style.scss */
   .pagination .next a {
     float: none;
     display: block;
@@ -3036,20 +3040,20 @@ footer p:last-of-type a:hover {
   }
 }
 
-/* line 570, ../sass/style.scss */
+/* line 572, ../sass/style.scss */
 blockquote {
   border-left: 3px solid #4fc1e9;
   color: #383f47;
   padding-left: 10px;
   margin: 0;
 }
-/* line 576, ../sass/style.scss */
+/* line 578, ../sass/style.scss */
 blockquote em {
   color: #66727f;
   font-size: 0.8em;
   font-family: 'Droid Serif', serif;
 }
-/* line 581, ../sass/style.scss */
+/* line 583, ../sass/style.scss */
 blockquote em:before {
   content: "\2014";
   margin-right: 4px;
