--- a/css/style.css
+++ b/css/style.css
@@ -1434,7 +1434,7 @@ a .icon-rotate-90:before, a .icon-rotate-180:before, a .icon-rotate-270:before, 
 
 body {
   background: #fefefe;
-  color: #66727f;
+  color: #7f8b99;
   font-family: Lato, 'PT Sans', sans-serif;
   font-weight: 400;
   font-size: 16px;
