--- a/sass/style.scss
+++ b/sass/style.scss
@@ -64,7 +64,7 @@ $tablet     : 768px;
 
 body {
     background: $white;
-    color: darken($lightGrey, 10%);
+    color: $lightGrey;
     font-family: Lato, 'PT Sans', sans-serif;
     font-weight: 400;
     font-size: 16px;
