--- a/css/style.css
+++ b/css/style.css
@@ -1650,7 +1650,7 @@ h1, h2, h3, h4 h5, h6 {
   font-weight: 400; }
 
 h1 {
-  color: #0b0c0e;
+  color: #1b1e22;
   font-family: "Mir-Medium", Lato, sans-serif;
   font-size: 2.5em;
   line-height: 1.25em;
