--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 <body>
     {% include header.html %}
     
-    <div class="container">
+    <div class="container body">
         <div class="grid12">
             <h1 class="title">{{ page.tagline }}</h1>
             
