--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@
 <body class="post">
     {% include header.html %}
 
-    <div class="container">
+    <div class="container body">
         <div class="grid12">
             <h1 class="title">{{ page.tagline }}</h1>
             <ul class="unstyled subtitle">
