--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,7 +7,7 @@
 @include font-face(Mir-Medium, '/font/mir-medium_regular', normal);
 @include font-face(Lato, '/font/lato_regular', 200);
 @include font-face(Kreon, '/font/kreon_bold', bold);
-@include font-face(Droid Serif, '/font/rDoidSerif-Italic-webfont', bold);
+@include font-face(Droid Serif, '/font/DroidSerif-Italic-webfont', bold);
 
 $white      : #fefefe;
 
@@ -44,6 +44,8 @@ body {
     background-position: 0 -8px;
     background-image: -webkit-linear-gradient(top, #ffffff, #ffffff 98%, #FF0000 100%);
     */
+
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 a {
@@ -71,23 +73,33 @@ section {
 
 .container {
     @include outer-container;
+    max-width: 60em;
 
     @include media(max-width 68em) {
         padding: 0 1em;
     }
 }
 
-.grid12 {
-    @include span-columns(12);
-}
-.grid9 {
-    @include span-columns(9);
+.grid3 {
+    @include span-columns(3);
 }
 .grid6 {
     @include span-columns(6);
 }
-.grid3 {
-    @include span-columns(3);
+.grid9 {
+    @include span-columns(9);
+}
+.grid12 {
+    @include span-columns(12);
+}
+ 
+.grid3,
+.grid6,
+.grid9,
+.grid12 {
+    @include media(max-width $smartphone) {
+        @include span-columns(12);
+    }
 }
 
 header {
@@ -183,7 +195,7 @@ header {
 
                 @include media(max-width $smartphone - 1) {
                     font-size: 0.8em;
-                    padding: 20px 10px 21px 10px;
+                    padding: 14px 10px;
                 }
             }
             
