--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -6,7 +6,7 @@
     <title>PB | {{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Pierre Baron">
-    <meta name="keyword" content="Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, CakePHP, jQuery">
+    <meta name="keyword" content="{{page.keywords}}">
 
     <link rel="shortcut icon" href="/img/favicon-pc-color.png">
     <link rel="apple-touch-icon-precomposed" href="/img/favicon-ipad-color2.png">
