--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -8,10 +8,8 @@
     <meta name="author" content="Pierre Baron">
     <meta name="keyword" content="{{page.keywords}}">
 
-    <link rel="shortcut icon" href="/img/favicon-pc-color.png">
-    <link rel="apple-touch-icon-precomposed" href="/img/favicon-ipad-color2.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/img/favicon-iphone-color2.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/img/favicon-ipad-color2.png">
+    <link rel="shortcut icon" href="/img/favicon.png">
+    <link rel="apple-touch-icon-precomposed" href="/img/favicon.png">
 
     <link rel="stylesheet" href="/css/style.css">
 </head>
